Final changes and cleared output for step 5, minor mods to utility.py

--- a/Project_2_VQE_Molecules/S5_Circuits.ipynb
+++ b/Project_2_VQE_Molecules/S5_Circuits.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,11 +34,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "circuit: \n",
+      "Rx(target=(0,), parameter=beta_0)\n",
+      "Rz(target=(0,), parameter=gamma_0)\n",
+      "Rx(target=(1,), parameter=beta_0)\n",
+      "Rz(target=(1,), parameter=gamma_0)\n",
+      "Rx(target=(2,), parameter=beta_0)\n",
+      "Rz(target=(2,), parameter=gamma_0)\n",
+      "Rx(target=(3,), parameter=beta_0)\n",
+      "Rz(target=(3,), parameter=gamma_0)\n",
+      "Exp-Pauli(target=(0, 1, 2, 3), control=(), parameter=tau_0, paulistring=X(0)Y(1)X(2)X(3))\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "H = tq.QubitHamiltonian.from_openfermion(get_qubit_hamiltonian('h2', 2, 'sto-3g', qubit_transf='jw'))\n",
     "\n",
@@ -57,11 +75,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.08880523485988236\n"
+     ]
+    }
+   ],
    "source": [
     "E = tq.ExpectationValue(H=H, U=U)\n",
     "vars = {'beta_1': 3.141592624143881, 'beta_0': 3.141592624143881, 'tau_0': 1.380815153240581, 'gamma_1': 0.0, 'beta_3': 0.0, 'gamma_3': 0.0, 'gamma_2': 0.0, 'gamma_0': 0.0, 'beta_2': 0.0} # values obtained from step 3\n",
@@ -77,22 +103,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "configrc.store_credentials:WARNING:2020-07-18 23:10:33,180: Credentials already present. Set overwrite=True to overwrite.\n"
+     ]
+    }
+   ],
    "source": [
     "from qiskit import IBMQ\n",
     "#input api key\n",
-    "#IBMQ.save_account('')"
+    "IBMQ.save_account('940ecb81efbfce9999e0cb7220f041a8a0857e55c565af170ecab75e6803dbcafea0733f8134c902fb60b3d2adcad30ad1a470fbe10b9dde2697fe7e0525ab6d')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.09001260137053244"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# list of devices available can be found in ibmq account page\n",
     "tq.simulate(E, variables=vars, samples=100, backend=\"qiskit\", device='ibmq_qasm_simulator')"
@@ -107,11 +152,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     ┌────────────────────┐┌─────────────────────┐   ┌───┐                   »\n",
+      "q_0: ┤ RX(f((beta_0,))_0) ├┤ RZ(f((gamma_0,))_1) ├───┤ H ├──────■────────────»\n",
+      "     ├────────────────────┤├─────────────────────┤┌──┴───┴───┐┌─┴─┐          »\n",
+      "q_1: ┤ RX(f((beta_0,))_0) ├┤ RZ(f((gamma_0,))_1) ├┤ RX(pi/2) ├┤ X ├──■───────»\n",
+      "     ├────────────────────┤├─────────────────────┤└──┬───┬───┘└───┘┌─┴─┐     »\n",
+      "q_2: ┤ RX(f((beta_0,))_0) ├┤ RZ(f((gamma_0,))_1) ├───┤ H ├─────────┤ X ├──■──»\n",
+      "     ├────────────────────┤├─────────────────────┤   ├───┤         └───┘┌─┴─┐»\n",
+      "q_3: ┤ RX(f((beta_0,))_0) ├┤ RZ(f((gamma_0,))_1) ├───┤ H ├──────────────┤ X ├»\n",
+      "     └────────────────────┘└─────────────────────┘   └───┘              └───┘»\n",
+      "c_0: ════════════════════════════════════════════════════════════════════════»\n",
+      "                                                                             »\n",
+      "c_1: ════════════════════════════════════════════════════════════════════════»\n",
+      "                                                                             »\n",
+      "c_2: ════════════════════════════════════════════════════════════════════════»\n",
+      "                                                                             »\n",
+      "c_3: ════════════════════════════════════════════════════════════════════════»\n",
+      "                                                                             »\n",
+      "«                                             ┌───┐    \n",
+      "«q_0: ─────────────────────────────────■──────┤ H ├────\n",
+      "«                                    ┌─┴─┐┌───┴───┴───┐\n",
+      "«q_1: ────────────────────────────■──┤ X ├┤ RX(-pi/2) ├\n",
+      "«                               ┌─┴─┐├───┤└───────────┘\n",
+      "«q_2: ───────────────────────■──┤ X ├┤ H ├─────────────\n",
+      "«     ┌───────────────────┐┌─┴─┐├───┤└───┘             \n",
+      "«q_3: ┤ RZ(f((tau_0,))_2) ├┤ X ├┤ H ├──────────────────\n",
+      "«     └───────────────────┘└───┘└───┘                  \n",
+      "«c_0: ═════════════════════════════════════════════════\n",
+      "«                                                      \n",
+      "«c_1: ═════════════════════════════════════════════════\n",
+      "«                                                      \n",
+      "«c_2: ═════════════════════════════════════════════════\n",
+      "«                                                      \n",
+      "«c_3: ═════════════════════════════════════════════════\n",
+      "«                                                      \n"
+     ]
+    }
+   ],
    "source": [
     "circ = tq.circuit.compiler.compile_exponential_pauli_gate(U)\n",
     "tq.draw(circ, backend=\"qiskit\")"
@@ -121,7 +207,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### H2O in 6-31G basis"
+    "For the cells bellow, you can see examples of how additional molecules can be setup to run on quantum hardware, however, since these are much larger molecules they will take substantially longer to run."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### H4 in STO-3G basis"
    ]
   },
   {
@@ -130,13 +223,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "H = tq.QubitHamiltonian.from_openfermion(get_qubit_hamiltonian('h2o', 2, '6-31g', qubit_transf='jw'))\n",
+    "H = tq.QubitHamiltonian.from_openfermion(get_qubit_hamiltonian('h4', 0, 'sto-3g', qubit_transf='jw'))\n",
     "U = construct_QMF_ansatz(H.n_qubits)\n",
     "\n",
-    "entang_list = ['X(0)Y(1)X(2)X(3)'] #REPLACE\n",
-    "for i, entangular in enumerate(entang_list):\n",
+    "entang_list = ['X(0)Y(1)X(4)X(5)', 'X(2)Y(3)X(4)X(5)', 'X(0)Y(1)X(6)X(7)', 'X(2)Y(3)X(6)X(7)']\n",
+    "for i, entangler in enumerate(entang_list):\n",
     "    a = tq.Variable(f\"tau_{i}\")\n",
-    "    U += tq.gates.ExpPauli(paulistring=tq.PauliString.from_string(entangular), angle=a)\n",
+    "    U += tq.gates.ExpPauli(paulistring=tq.PauliString.from_string(entangler), angle=a)\n",
     "print(U)"
    ]
   },
@@ -154,7 +247,7 @@
    "outputs": [],
    "source": [
     "E = tq.ExpectationValue(H=H, U=U)\n",
-    "vars = {'beta_0': 1.5708157666776765, 'gamma_0': 1.5708402626167468, 'tau_0': 1.571153075577053} # values obtained from step 3\n",
+    "vars = {'beta_0': 3.141592624143881, 'gamma_0': 0.0, 'beta_1': 3.141592624143881, 'gamma_1': 0.0, 'beta_2': 3.141592624143881, 'gamma_2': 0.0, 'beta_3': 3.141592653589793, 'gamma_3': 0.0, 'beta_4': 0.0, 'gamma_4': 0.0, 'beta_5': 0.0, 'gamma_5': 0.0, 'beta_6': 0.0, 'gamma_6': 0.0, 'beta_7': 0.0, 'gamma_7': 0.0, 'tau_0': 0.00111298574588045, 'tau_1': 1.493808151532405, 'tau_2': 0.032150120108507, 'tau_3': 0.00190418578147497} # values obtained from step 3\n",
     "print(tq.simulate(E, variables=vars))"
    ]
   },
@@ -189,7 +282,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### H4 in STO-3G basis"
+    "### H2O in 6-31G basis"
    ]
   },
   {
@@ -198,13 +291,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "H = tq.QubitHamiltonian.from_openfermion(get_qubit_hamiltonian('h4', 2, 'sto-3g', qubit_transf='jw'))\n",
+    "H = tq.QubitHamiltonian.from_openfermion(get_qubit_hamiltonian('h2o', 1, '6-31g', qubit_transf='jw'))\n",
     "U = construct_QMF_ansatz(H.n_qubits)\n",
     "\n",
-    "entang_list = [] #REPLACE\n",
-    "for i, entangular in enumerate(entang_list):\n",
+    "entang_list = ['X(0)Y(1)X(4)X(5)', 'X(2)Y(3)X(4)X(5)', 'X(0)Y(1)X(6)X(7)', 'X(2)Y(3)X(6)X(7)']\n",
+    "for i, entangler in enumerate(entang_list):\n",
     "    a = tq.Variable(f\"tau_{i}\")\n",
-    "    U += tq.gates.ExpPauli(paulistring=tq.PauliString.from_string(entangular), angle=a)\n",
+    "    U += tq.gates.ExpPauli(paulistring=tq.PauliString.from_string(entangler), angle=a)\n",
     "print(U)"
    ]
   },
@@ -223,7 +316,7 @@
    "source": [
     "E = tq.ExpectationValue(H=H, U=U)\n",
     "\n",
-    "vars = {} # values obtained from step 3\n",
+    "vars = {'gamma_7': 0.0, 'tau_0': 0.09850072062214467, 'gamma_5': 0.0, 'beta_1': 3.141592653589793, 'tau_3': 0.048183794335591834, 'tau_5': 0.034404300286443194, 'tau_4': 0.04135121252205053, 'gamma_1': 0.0, 'beta_0': 3.141592653589793, 'gamma_3': 0.0, 'gamma_4': 0.0, 'beta_5': 0.0, 'beta_2': 3.141592653589793, 'beta_4': 0.0, 'gamma_2': 0.0, 'beta_7': 0.0, 'tau_1': 0.06125613956121948, 'tau_2': 0.06252892067861264, 'gamma_6': 0.0, 'beta_3': 3.141592653589793, 'beta_6': 0.0, 'gamma_0': 0.0} # values obtained from step 3\n",
     "print(tq.simulate(E, variables=vars))"
    ]
   },
@@ -266,13 +359,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "H = tq.QubitHamiltonian.from_openfermion(get_qubit_hamiltonian('n2', 2, 'sto-3g', qubit_transf='jw'))\n",
+    "H = tq.QubitHamiltonian.from_openfermion(get_qubit_hamiltonian('n2', 0, 'sto-3g', qubit_transf='jw'))\n",
     "U = construct_QMF_ansatz(H.n_qubits)\n",
     "\n",
-    "entang_list = [] #REPLACE\n",
-    "for i, entangular in enumerate(entang_list):\n",
+    "entang_list = ['X(1)Y(4)X(6)X(7)', 'X(0)Y(5)X(6)X(7)', 'X(4)Y(5)X(6)X(7)', 'X(0)Y(1)X(6)X(7)', 'X(2)Y(3)X(6)X(7)']\n",
+    "for i, entangler in enumerate(entang_list):\n",
     "    a = tq.Variable(f\"tau_{i}\")\n",
-    "    U += tq.gates.ExpPauli(paulistring=tq.PauliString.from_string(entangular), angle=a)\n",
+    "    U += tq.gates.ExpPauli(paulistring=tq.PauliString.from_string(entangler), angle=a)\n",
     "print(U)"
    ]
   },
@@ -291,7 +384,7 @@
    "source": [
     "E = tq.ExpectationValue(H=H, U=U)\n",
     "\n",
-    "vars = {} # values obtained from step 3\n",
+    "vars = {'beta_0': 3.141592624143881,  'gamma_0': 0.0,  'beta_1': 3.141592624143881,  'gamma_1': 0.0,  'beta_2': 3.141592624143881,  'gamma_2': 0.0,  'beta_3': 3.141592624143881,  'gamma_3': 0.0,  'beta_4': 3.141592624143881,  'gamma_4': 0.0,  'beta_5': 3.141592624143881,  'gamma_5': 0.0,  'beta_6': 0.0,  'gamma_6': 0.0,  'beta_7': 0.0,  'gamma_7': 0.0,  'tau_0': 0.014520100129528337,  'tau_1': 0.010595732234729736,  'tau_2': 0.007558884488935934,  'tau_3': 0.002352892062786226,  'tau_4': -0.002352892062786124} # values obtained from step 3\n",
     "print(tq.simulate(E, variables=vars))"
    ]
   },
