Task#1, Task#2 added, plots added

--- a/Project_3_Franck_Condon_Factors/Task3.ipynb
+++ b/Project_3_Franck_Condon_Factors/Task3.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,11 +46,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "inputfile = open(\"./Task2Code/V3.task3.out\", \"r\")\n",
+    "inputfile = open(argv[1], \"r\")\n",
     "\n",
     "N=int(inputfile.readline())     #Number of Atoms\n",
     "nmodes=3*N-6                    #Number of Modes\n",
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,20 +137,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'spectrum.html'"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "spectrum = plot.spectrum(e, xmin=-300, xmax=2000)\n",
     "offline.plot(spectrum, filename=\"spectrum.html\")"
