--- a/Project_3_Franck_Condon_Factors/Task3.ipynb
+++ b/Project_3_Franck_Condon_Factors/Task3.ipynb
@@ -102,6 +102,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[255.  255.  420.8]\n",
+      "[261.9 263.3 421.8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(w)\n",
+    "print(wp)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
    "outputs": [
@@ -144,12 +163,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "#nr_samples = 20000\n",
-    "nr_samples = 20000\n",
+    "nr_samples = 10\n",
     "s = sample.vibronic(t, U1, r, U2, alpha, nr_samples)\n",
     "e = vibronic.energies(s, w, wp)"
    ]
@@ -165,23 +184,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'spectrum.html'"
+       "'spectrum_10.html'"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "spectrum = plot.spectrum(e, xmin=-300, xmax=2000)\n",
-    "offline.plot(spectrum, filename=\"spectrum.html\")"
+    "offline.plot(spectrum, filename=\"spectrum_{}.html\".format(nr_samples))"
    ]
   },
   {
