--- a/Project_4_Ising_Annealer/Task_2.ipynb
+++ b/Project_4_Ising_Annealer/Task_2.ipynb
@@ -16,8 +16,8 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from ising_animator import IsingAnimator\n",
-    "from abstract_ising import AbstractIsing\n",
+    "from common.ising_animator import IsingAnimator\n",
+    "from common.abstract_ising import AbstractIsing\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -3279,7 +3279,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
