--- a/Project_4_Ising_Annealer/Task_3.ipynb
+++ b/Project_4_Ising_Annealer/Task_3.ipynb
@@ -30,8 +30,8 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "from abstract_ising import AbstractIsing\n",
-    "from ising_animator import IsingAnimator\n",
+    "from common.abstract_ising import AbstractIsing\n",
+    "from common.ising_animator import IsingAnimator\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -190,7 +190,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
