Task 1: Add some explanations

--- a/Project_4_Ising_Annealer/Task_1.ipynb
+++ b/Project_4_Ising_Annealer/Task_1.ipynb
@@ -6,9 +6,11 @@
    "source": [
     "# 2D Ferromagnetic Ising on a PBC Square Lattice\n",
     "\n",
+    "Let us take a look at a simple ferromagnetic ising model on a 2D square lattice with periodic baoundary conditions (PBC) given by the following hamiltonian\n",
+    "\n",
     "$$H = -J\\sum_{\\langle ij\\rangle} \\sigma_i\\sigma_j$$\n",
     "\n",
-    "By inspection, we see that the ground states of this system correspond to all spins pointing in the same direction. \n",
+    "where $J$ is a positive constant, and $\\langle ij \\rangle$ means nearest neighbors. Note, that except the trivial nearest neighbors, since we are considering a PBC lattice, spins that are on the different ends of the same row or column are considered neighbors as well. By inspection, we see that the ground states of this system corresponds to all spins pointing in the same direction. \n",
     "Our goal is to find one of the ground state(s) automatically through Monte Carlo sampling.\n",
     "\n",
     "The probability distribution of the Ising model at temperature $T$ is given by the Gibbs distribution:\n",
