Polish some text/code

--- a/Project_4_Ising_Annealer/Task_1.ipynb
+++ b/Project_4_Ising_Annealer/Task_1.ipynb
@@ -163,7 +163,7 @@
     "    E = ising.mc_step(T=1.0)\n",
     "    \n",
     "    if t % 50 == 0:\n",
-    "        print(E)"
+    "        print(\"Iteration %i, Energy=%i\" % (t, E))"
    ]
   },
   {
