Task 2: initial implementation

--- a/Project_4_Ising_Annealer/Task_1.ipynb
+++ b/Project_4_Ising_Annealer/Task_1.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,6 +31,7 @@
     "\n",
     "from common.ising_animator import IsingAnimator\n",
     "from common.abstract_ising import AbstractIsing\n",
+    "from common.utils import exp_decay_schedule\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -44,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,25 +95,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 1, -1,  1, -1, -1,  1, -1,  1,  1,  1],\n",
-       "       [ 1,  1,  1,  1,  1, -1, -1, -1, -1,  1],\n",
-       "       [ 1, -1, -1,  1,  1,  1,  1, -1,  1,  1],\n",
-       "       [ 1,  1,  1, -1,  1,  1,  1, -1, -1, -1],\n",
-       "       [ 1, -1,  1,  1, -1, -1, -1,  1, -1,  1],\n",
-       "       [ 1,  1, -1, -1,  1, -1, -1,  1, -1, -1],\n",
-       "       [-1, -1,  1,  1,  1,  1, -1, -1,  1, -1],\n",
-       "       [ 1,  1, -1, -1,  1,  1,  1, -1,  1,  1],\n",
-       "       [-1,  1, -1,  1, -1, -1,  1, -1, -1,  1],\n",
-       "       [-1,  1, -1, -1, -1, -1, -1,  1,  1,  1]])"
+       "array([[ 1,  1, -1, -1,  1, -1, -1, -1,  1,  1],\n",
+       "       [ 1,  1, -1, -1,  1,  1, -1, -1,  1,  1],\n",
+       "       [-1, -1, -1, -1, -1,  1,  1,  1, -1,  1],\n",
+       "       [ 1,  1,  1,  1, -1, -1, -1,  1,  1, -1],\n",
+       "       [ 1,  1,  1, -1, -1,  1, -1,  1, -1, -1],\n",
+       "       [-1,  1,  1, -1,  1, -1, -1,  1,  1, -1],\n",
+       "       [ 1, -1,  1, -1,  1, -1, -1, -1,  1,  1],\n",
+       "       [ 1,  1, -1,  1, -1,  1, -1, -1, -1, -1],\n",
+       "       [ 1,  1, -1,  1,  1,  1, -1, -1,  1, -1],\n",
+       "       [ 1, -1,  1,  1,  1, -1, -1, -1,  1,  1]])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -133,26 +134,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-72\n",
-      "-200\n",
-      "-200\n",
-      "-200\n",
-      "-200\n",
-      "-200\n",
-      "-200\n",
-      "-200\n",
-      "-200\n",
-      "-200\n",
-      "-200\n",
-      "-200\n",
-      "-200\n",
-      "-200\n",
-      "-200\n",
-      "-200\n",
-      "-200\n",
-      "-200\n",
-      "-200\n",
-      "-200\n"
+      "Iteration 0, Energy=-64\n",
+      "Iteration 50, Energy=-200\n",
+      "Iteration 100, Energy=-200\n",
+      "Iteration 150, Energy=-200\n",
+      "Iteration 200, Energy=-200\n",
+      "Iteration 250, Energy=-200\n",
+      "Iteration 300, Energy=-200\n",
+      "Iteration 350, Energy=-200\n",
+      "Iteration 400, Energy=-200\n",
+      "Iteration 450, Energy=-200\n",
+      "Iteration 500, Energy=-200\n",
+      "Iteration 550, Energy=-200\n",
+      "Iteration 600, Energy=-200\n",
+      "Iteration 650, Energy=-200\n",
+      "Iteration 700, Energy=-200\n",
+      "Iteration 750, Energy=-200\n",
+      "Iteration 800, Energy=-200\n",
+      "Iteration 850, Energy=-200\n",
+      "Iteration 900, Energy=-200\n",
+      "Iteration 950, Energy=-200\n",
+      "The final spin configuration:  [[1 1 1 1 1 1 1 1 1 1]\n",
+      " [1 1 1 1 1 1 1 1 1 1]\n",
+      " [1 1 1 1 1 1 1 1 1 1]\n",
+      " [1 1 1 1 1 1 1 1 1 1]\n",
+      " [1 1 1 1 1 1 1 1 1 1]\n",
+      " [1 1 1 1 1 1 1 1 1 1]\n",
+      " [1 1 1 1 1 1 1 1 1 1]\n",
+      " [1 1 1 1 1 1 1 1 1 1]\n",
+      " [1 1 1 1 1 1 1 1 1 1]\n",
+      " [1 1 1 1 1 1 1 1 1 1]]\n",
+      "The energy of the configuration:  -200\n"
      ]
     }
    ],
@@ -163,36 +175,10 @@
     "    E = ising.mc_step(T=1.0)\n",
     "    \n",
     "    if t % 50 == 0:\n",
-    "        print(\"Iteration %i, Energy=%i\" % (t, E))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-1, -1, -1, -1, -1, -1, -1, -1, -1, -1],\n",
-       "       [-1, -1, -1, -1, -1, -1, -1, -1, -1, -1],\n",
-       "       [-1, -1, -1, -1, -1, -1, -1, -1, -1, -1],\n",
-       "       [-1, -1, -1, -1, -1, -1, -1, -1, -1, -1],\n",
-       "       [-1, -1, -1, -1, -1, -1, -1, -1, -1, -1],\n",
-       "       [-1, -1, -1, -1, -1, -1, -1, -1, -1, -1],\n",
-       "       [-1, -1, -1, -1, -1, -1, -1, -1, -1, -1],\n",
-       "       [-1, -1, -1, -1, -1, -1, -1, -1, -1, -1],\n",
-       "       [-1, -1, -1, -1, -1, -1, -1, -1, -1, -1],\n",
-       "       [-1, -1, -1, -1, -1, -1, -1, -1, -1, -1]])"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ising.spins"
+    "        print(\"Iteration %i, Energy=%i\" % (t, E))\n",
+    "        \n",
+    "print(\"The final spin configuration: \", ising.spins)\n",
+    "print(\"The energy of the configuration: \", ising.energy())"
    ]
   },
   {
@@ -207,7 +193,9 @@
     "\n",
     "$$T(t) = T_i \\left(\\frac{T_f}{T_i}\\right)^{t/N}$$\n",
     "\n",
-    "where $t = 0, \\dots, N$, $T(0) = T_i$, and $T(N) = T_f$"
+    "where $t = 0, \\dots, N$, $T(0) = T_i$, and $T(N) = T_f$\n",
+    "\n",
+    "In `common/utils.py` we have defined a function called `exp_decay_schedule` which return the sequence of times corresponding to the exponential decay schedule for given $N, T_i \\text{ and } T_f$. Let us generate the schedule for $N=500, T_i=100 \\text{ and } T_f=0.01$"
    ]
   },
   {
@@ -216,12 +204,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "N = 500\n",
-    "t = np.arange(N+1)\n",
-    "T_i = 100\n",
-    "T_f = 0.01\n",
-    "\n",
-    "T = T_i * ((T_f/T_i) ** (t/N))"
+    "T = exp_decay_schedule(500, 100, 0.01)"
    ]
   },
   {
