write H2 energy calc

--- a/Project_4_Ising_Annealer/Task_3.ipynb
+++ b/Project_4_Ising_Annealer/Task_3.ipynb
@@ -8,12 +8,7 @@
     "\n",
     "Your final task is to calculate the ground state energy of a hydrogen molecule using a Generalized Ising Hamiltonian:\n",
     "\n",
-    "$$ \n",
-    "H = E_0 + \\sum_i h_i\\sigma_i + \\sum_{ij} J_{ij}\\sigma_i\\sigma_j\n",
-    "+ \\sum_{ijk} K_{ijk}\\sigma_i\\sigma_j\\sigma_k\n",
-    "+ \\sum_{ijkl} L_{ijkl}\\sigma_i\\sigma_j\\sigma_k\\sigma_l\n",
-    "+ \\cdots\n",
-    "$$\n",
+    "$$ H = E_0 + \\sum_i h_i\\sigma_i + \\sum_{ij} J_{ij}\\sigma_i\\sigma_j + \\sum_{ijk} K_{ijk}\\sigma_i\\sigma_j\\sigma_k + \\sum_{ijkl} L_{ijkl}\\sigma_i\\sigma_j\\sigma_k\\sigma_l + \\cdots $$\n",
     "\n",
     "where the Hamiltonian parameters ($E_0, h_i, J_{ij}, K_{ijk}, L_{ijkl}$) will be provided to you by the `read_generalized_ising_hamiltonian` function below.\n",
     "\n",
@@ -38,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,24 +74,123 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, you must write a class that describes the Generalized Ising Model given the arrays containing the Hamiltonian parameters. You will need to write a function which computes energy of the stored spin configuration (see the previous tasks for inspiration), as well as a function which computes the change in energy resulting from a single-spin-flip (you could of course use the naive approach and simply compute the energy of two spin configurations and subtract one from the other)."
+    "First, you must write a class that describes the Generalized Ising Model given the arrays containing the\n",
+    " Hamiltonian parameters. You will need to write a function which computes energy of the stored spin configuration\n",
+    " (see the previous tasks for inspiration), as well as a function which computes the change in energy resulting from\n",
+    " a single-spin-flip (you could of course use the naive approach and simply compute the energy of two spin configurations\n",
+    "  and subtract one from the other)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 68,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6214728053893763\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "0.6214728053893763"
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spins = 2 * (np.random.rand(4) < 0.5) - 1\n",
+    "\n",
+    "res = 0\n",
+    "for i, s0 in enumerate(spins):\n",
+    "    for j, s1 in enumerate(np.roll(spins, 1)):\n",
+    "        for k, s2 in enumerate(np.roll(spins, 2)):\n",
+    "                res += s0 * s1 * s2*  K[i][j][k]\n",
+    "print(res)\n",
+    "np.einsum(spins, [0],  np.roll(spins, 1), [1],  np.roll(spins, 2), [2],  K, [0,1,2])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.03775117547636375, -0.13421845044578246, -0.32839586407884513, 0.07570471329069535, 0.1699209802656651]\n",
+      "[0.03775117547636375, -0.13421845044578246, -0.32839586407884513, 0.07570471329069535, 0.1699209802656651]\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "spins = 2 * (np.random.rand(4) < 0.5) - 1\n",
+    "terms = (E0, h, J, K, L)\n",
+    "\n",
+    "energy = []\n",
+    "for dim, term in enumerate(terms):\n",
+    "    prog = []\n",
+    "    for d in range(dim):\n",
+    "        prog.extend([np.roll(spins, d), [d]])\n",
+    "    prog.extend([term, list(range(dim))])\n",
+    "    energy.append(np.einsum(*prog))\n",
+    "\n",
+    "energy1 = []\n",
+    "energy1.append(float(E0))\n",
+    "energy1.append(np.einsum('i, i', h, spins))\n",
+    "energy1.append(np.einsum('i,j,ij', spins, np.roll(spins, 1), J))\n",
+    "energy1.append(np.einsum('i,j,k, ijk', spins, np.roll(spins, 1), np.roll(spins, 2), K))\n",
+    "energy1.append(np.einsum('i,j,k,l, ijkl', spins, np.roll(spins, 1), np.roll(spins, 2), np.roll(spins, 3), L))\n",
+    "\n",
+    "print(energy)\n",
+    "print(energy1)\n",
+    "print(np.testing.assert_array_equal(energy, energy1))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write a class to describe the generalized Ising Model given its Hamiltonian parameters\n",
     "\n",
     "class GeneralizedIsingModel(AbstractIsing):\n",
-    "    def __init__(self):\n",
-    "        pass\n",
+    "    def __init__(self, terms):\n",
+    "        self.terms = terms\n",
+    "        for t0, t1 in zip(terms, terms[1:]):\n",
+    "            if len(t1.shape) < len(t0.shape):\n",
+    "                raise ValueError('The terms have not been provided in the right order. Please provide them in order of '\n",
+    "                                 'increasing dimension')\n",
+    "\n",
+    "        self.n_spins = terms[1].shape[0]\n",
+    "        self.spins = 2 * (np.random.rand(self.n_spins) < 0.5) - 1\n",
     "    \n",
     "    def energy(self):\n",
-    "        # hint: np.einsum may be helpful here\n",
-    "        pass\n",
+    "        energy = 0\n",
+    "        for dim, term in enumerate(self.terms):\n",
+    "            prog = []\n",
+    "            for d in range(dim):\n",
+    "                prog.extend([np.roll(self.spins, d), [d]])\n",
+    "            prog.extend([term, list(range(dim))])\n",
+    "            energy += np.einsum(*prog)\n",
+    "            return energy\n",
     "    \n",
     "    def energy_diff(self, *coords):\n",
     "        pass\n",
