--- a/Project_4_Ising_Annealer/Group2-Task2.ipynb
+++ b/Project_4_Ising_Annealer/Group2-Task2.ipynb
@@ -68,24 +68,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "-4"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== Exact Energy Calculation for 10 ===\n",
+      "-8\n",
+      "\n",
+      "=== Annealing Energy Calculation ===\n",
+      "115.8777356155126\n",
+      "115.8777356155126\n",
+      "115.8777356155126\n",
+      "115.8777356155126\n",
+      "115.8777356155126\n",
+      "115.8777356155126\n",
+      "107.64652136298349\n",
+      "115.8777356155126\n",
+      "115.8777356155126\n",
+      "115.8777356155126\n",
+      "115.8777356155126\n",
+      "115.8777356155126\n",
+      "100.0\n",
+      "107.64652136298349\n",
+      "115.8777356155126\n",
+      "115.8777356155126\n",
+      "107.64652136298349\n",
+      "107.64652136298349\n",
+      "115.8777356155126\n",
+      "115.8777356155126\n"
+     ]
     }
    ],
    "source": [
     "ising = RandomBondIsing1DPBC(10, J=1)\n",
-    "ising.spins\n",
-    "ising.energy()"
+    "\n",
+    "# perform 1000 MC steps\n",
+    "for t in range(1000):\n",
+    "    # take a look at the abstract_ising.py file to see how mc_step works\n",
+    "    E = ising.mc_step(T=1.0) \n",
+    "    if t % 50 == 0:\n",
+    "        #print(E)\n",
+    "        pass\n",
+    "        \n",
+    "#print(E)\n",
+    "\n",
+    "# This is getting ground state exactly\n",
+    "dim = np.arange(2 ** ising.num_spins)\n",
+    "space = ((dim[:, None] & (1 << np.arange(ising.num_spins))) > 0)\n",
+    "space = 2*space.astype(int) - 1\n",
+    "ising.energy(space).min()\n",
+    "print(\"=== Exact Energy Calculation for 10 ===\")\n",
+    "print(ising.energy(space).min())\n",
+    "\n",
+    "## This is annealing\n",
+    "#Monte Carlo Steps\n",
+    "N = 500\n",
+    "\n",
+    "#t = np.arange(N+1)\n",
+    "# Starting temperature\n",
+    "T_i = 100\n",
+    "\n",
+    "# Final Temperature\n",
+    "T_f = 0.01\n",
+    "\n",
+    "#T = T_i * ((T_f/T_i) ** (t/N))\n",
+    "print(\"\\n=== Annealing Energy Calculation ===\")\n",
+    "# perform 1000 MC steps\n",
+    "for t in range(1000):\n",
+    "    # take a look at the abstract_ising.py file to see how mc_step works\n",
+    "    E = ising.mc_step(T=1.0)\n",
+    "\n",
+    "    T = T_i * ((T_f/T_i) ** (E/N))\n",
+    "    \n",
+    "    if t % 50 == 0:\n",
+    "        print(T)\n",
+    "        pass\n",
+    "\n",
+    "#plt.plot(t, T)\n",
+    "#plt.title(\"Exponential Decay Annealing\")\n",
+    "#plt.ylabel(\"$T$\")\n",
+    "#plt.xlabel(\"time\");"
    ]
   },
   {
@@ -105,7 +170,7 @@
     }
    ],
    "source": [
-    "ising = RandomBondIsing1DPBC(20, J=2)\n",
+    "ising = RandomBondIsing1DPBC(20, J=1)\n",
     "ising.spins\n",
     "ising.energy()"
    ]
@@ -127,7 +192,7 @@
     }
    ],
    "source": [
-    "ising = RandomBondIsing1DPBC(50, J=2)\n",
+    "ising = RandomBondIsing1DPBC(50, J=1)\n",
     "ising.spins\n",
     "ising.energy()"
    ]
@@ -149,7 +214,7 @@
     }
    ],
    "source": [
-    "ising = RandomBondIsing1DPBC(100, J=2)\n",
+    "ising = RandomBondIsing1DPBC(100, J=1)\n",
     "ising.spins\n",
     "ising.energy()"
    ]
@@ -249,7 +314,7 @@
     }
    ],
    "source": [
-    "ising = FullyConnectedRandomBondIsing(10, J=999)\n",
+    "ising = FullyConnectedRandomBondIsing(10, J=1)\n",
     "ising.spins\n",
     "ising.energy()"
    ]
@@ -271,7 +336,7 @@
     }
    ],
    "source": [
-    "ising = FullyConnectedRandomBondIsing(20, J=222)\n",
+    "ising = FullyConnectedRandomBondIsing(20, J=1)\n",
     "ising.spins\n",
     "ising.energy()"
    ]
@@ -293,7 +358,7 @@
     }
    ],
    "source": [
-    "ising = FullyConnectedRandomBondIsing(50, J=333)\n",
+    "ising = FullyConnectedRandomBondIsing(50, J=1)\n",
     "ising.spins\n",
     "ising.energy()"
    ]
@@ -315,7 +380,7 @@
     }
    ],
    "source": [
-    "ising = FullyConnectedRandomBondIsing(100, J=111)\n",
+    "ising = FullyConnectedRandomBondIsing(100, J=1)\n",
     "ising.spins\n",
     "ising.energy()"
    ]
