Task 3 write-up

--- a/Project_4_Ising_Annealer/Task_3.ipynb
+++ b/Project_4_Ising_Annealer/Task_3.ipynb
@@ -315,12 +315,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "is_executing": true
-    }
-   },
+   "execution_count": 53,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -357,6 +353,58 @@
       "MC energy: -1.0703883929861222\n",
       "Ground state energy: -1.0703883929861222\n",
       "Accuracy = 100.0%\n",
+      "\n",
+      "MC energy: -0.9336434560990403\n",
+      "Ground state energy: -0.934973716316891\n",
+      "Accuracy = 99.85772218035274%\n",
+      "\n",
+      "MC energy: -0.9391348485310812\n",
+      "Ground state energy: -0.9391348485310812\n",
+      "Accuracy = 100.0%\n",
+      "\n",
+      "MC energy: -1.1962965239472774\n",
+      "Ground state energy: -1.1962965239472774\n",
+      "Accuracy = 100.0%\n",
+      "\n",
+      "MC energy: -0.9332284072659003\n",
+      "Ground state energy: -0.9332284072659003\n",
+      "Accuracy = 100.0%\n",
+      "\n",
+      "MC energy: -0.9451681798296837\n",
+      "Ground state energy: -0.9451681798296837\n",
+      "Accuracy = 100.0%\n",
+      "\n",
+      "MC energy: -0.9333064423061619\n",
+      "Ground state energy: -0.9341512972887758\n",
+      "Accuracy = 99.90955908480072%\n",
+      "\n",
+      "MC energy: -1.2251484110119892\n",
+      "Ground state energy: -1.2251484110119892\n",
+      "Accuracy = 100.0%\n",
+      "\n",
+      "MC energy: -1.0031903634429231\n",
+      "Ground state energy: -1.0031903634429231\n",
+      "Accuracy = 100.0%\n",
+      "\n",
+      "MC energy: -0.9334276420828084\n",
+      "Ground state energy: -0.9345051044990998\n",
+      "Accuracy = 99.88470235089096%\n",
+      "\n",
+      "MC energy: -0.9357551463669698\n",
+      "Ground state energy: -0.9375644051184275\n",
+      "Accuracy = 99.80702565694895%\n",
+      "\n",
+      "MC energy: -1.224913679704077\n",
+      "Ground state energy: -1.224913679704077\n",
+      "Accuracy = 100.0%\n",
+      "\n",
+      "MC energy: -0.9801808392900251\n",
+      "Ground state energy: -0.9801808392900251\n",
+      "Accuracy = 100.0%\n",
+      "\n",
+      "MC energy: -0.9413595262128263\n",
+      "Ground state energy: -0.9413595262128263\n",
+      "Accuracy = 100.0%\n",
       "\n"
      ]
     }
@@ -377,16 +425,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "cell_type": "markdown",
    "source": [
+    "We see here that the MC annealer works quite well, apart from the cases where there is a small separation between the\n",
+    " ground state and first excited state, here the accuracy dips slightly.\n",
+    "\n",
     "\n"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%% md\n"
     }
    }
   }
